# weather-service

./: .dockerignore  .env  .env.example  .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml
contrib/: requirements.txt
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: weather-service.json
docs/: CELERY_TESTING.md  historias_tarefas.md
logs/: .gitkeep
scripts/: init-grafana.sh
static/: .gitkeep
tests/: conftest.py
tests/features/: __init__.py  environment.py  weather.feature
tests/features/steps/: weather_steps.py
tests/integration/: test_weather_api.py
tests/unit/: test_celery_tasks.py  test_services.py
weather_service/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
weather_service/apps/core/: apps.py  middleware.py  urls.py  views.py
weather_service/apps/core/management/commands/: behave.py
weather_service/apps/weather/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  tasks.py  urls.py  usecases.py  views.py
weather_service/apps/weather/migrations/: 0001_initial.py  __init__.py
weather_service/settings/: base.py  development.py  production.py  test.py
